feat: edit keyboardWP, shelter/pages

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 	          <div class="p_foto game"></div>
 	          <h3 class="p_title">2048</h3>
 	        </a>
-	        <a href="https://gitmumca.github.io/keyboard/" class="project" target="blank">
+	        <a href="https://gitmumca.github.io/keyboardWP/" class="project" target="blank">
 	          <div class="p_foto keyboard"></div>
 	          <h3 class="p_title">keyBoard</h3>
 	        </a>
@@ -212,7 +212,7 @@
 	          <div class="p_foto portfolio"></div>
 	          <h3 class="p_title">portfolio</h3>
 	        </a>
-	        <a href="https://gitmumca.github.io/shelter/main/" class="project" target="blank">
+	        <a href="https://gitmumca.github.io/shelter/pages/main/" class="project" target="blank">
 	          <div class="p_foto shelter"></div>
 	          <h3 class="p_title">shelter</h3> 
 	        </a>
