feat: add css-slider

--- a/index.html
+++ b/index.html
@@ -147,18 +147,16 @@
 			 	<div class="right_orange"></div>
 			</div>
 			<div class="about_text">
-				<p>Hi! Now I work as a 1С programmist on OJS Company "NAFTAN". My responsibilities include developing software modules for warehouse and accounting</p>
-		  	<p>Also I’m a Junior Front-end Developer. My experience in OOP with the automating business processes of an enterprise and accounting gives me a good basis for learning Front-End technology. I'm learning programming on YouTube and doing a course at RSSchool</p>
-		  	<p>I love programming and have always been interested in psychology. Developing technical skills and communicating successfully with people are equally important to me. And my desire to develop helps to find my own path</p>
-		  	<p>Some of my hobbies include knitting, ice skating and traveling to historical places of Belarus</p>
+				<p>I work over 10 years as a 1C developer on OJSC "NAFTAN". The main directions of my responsibilities are Personal accounting and Sales of ready-made products. I develop program modules for information exchange between configurations using SQL server and XML technology. Also, I develop business processes includes automatic creating of conductional tasks and setting user access to objects on different points</p>
+		  	<p>Actually I’m a Junior Front-end Developer. My experience in OOP programming became a good base for further development. Modern sensible learning resources have become a pleasant surprise for me. It turns study into an effective training with a decent result in a short time. The transition of education from reading literature to viewing on YouTube is obvious. However, the ability to balance between these two directions gives a wonderful result</p>
 			</div>
 			<div id="skills" class="right_line">
 		 		<h2 class="right_grey">Skills</h2>
 		 		<div class="right_orange"></div>
 			</div>
 			<ul class="skill_li">
-		  	<li>HTML5, CSS3, JavaScript</li>
-		  	<li>Git, SublimeText, VSCode</li>
+		  	<li>HTML, CSS</li>
+		  	<li>JavaScript, Git </li>
 		  	<li>1С Enterprise 8.2, SQL, XML, COM</li>
 		  	<li>Borland Delphi 6, C++ Builder</li>
 			</ul>
@@ -182,7 +180,7 @@
 			</div>
 			<ul class="experience_li">
 		  	<li class="exp_year">2008 – 2022 1C Enterprise 8.2 Developer</li>
-		  	<li>Development and support business processes for the shipment of finished products with the preparation of shipping documents, the formation of invoices and uploading to national databases</li>
+		  	<li>Development and support business processes for the dispatch of ready-made products with the preparation of shipping documents, the formation of invoices and uploading to republic databases</li>
 			</ul>
 
 			<section class="projects" id="projects">
@@ -204,9 +202,9 @@
 	          <div class="p_foto eco-sounds"></div>
 	          <h3 class="p_title">eco-sounds</h3>
 	        </a>
-	        <a href="https://gitmumca.github.io/movie-app/" class="project" target="blank">
-	          <div class="p_foto movie"></div>
-	          <h3 class="p_title">movie-app</h3> 
+	        <a href="https://gitmumca.github.io/css-slider/" class="project" target="blank">
+	          <div class="p_foto slider"></div>
+	          <h3 class="p_title">css-slider</h3> 
 	        </a>
 	        <a href="https://gitmumca.github.io/portfolio/" class="project" target="blank">
 	          <div class="p_foto portfolio"></div>
